--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,126 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap");
+.right {
+  text-align: right;
+}
+
+.left {
+  text-align: left;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+  border-bottom: 1px solid #ABABAB;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  padding: 52px;
+  font-size: 24px;
+  color: #444444;
+  border-right: 1px solid #ABABAB;
+  margin: 0;
+  width: 20px;
+  height: 20px;
+}
+
+.nav-contents {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.nav-bar ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  gap: 100px;
+}
+
+.nav-bar ul li a {
+  font-size: 16px;
+  text-align: center;
+  letter-spacing: 1.27px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
+}
+
+.active_link {
+  color: #FF4646;
+}
+
+.who_we_are {
+  width: 75%;
+  margin: 0 auto;
+  font-family: "Playfair Display", sans-serif;
+  padding: 80px 0px;
+}
+
+.contents {
+  display: flex;
+  flex-direction: row;
+}
+
+.vertical {
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+}
+
+.contents span:nth-child(1) {
+  font-size: 47px;
+  line-height: 0.7;
+}
+
+.contents span:nth-child(2) {
+  font-size: 47px;
+  color: #707070;
+  opacity: 30%;
+}
+
+.content-text {
+  width: 615px;
+  margin-left: 20px;
+}
+
+.title {
+  margin: 0px 0px 37px 0px;
+  font-size: 34px;
+  color: #444444;
+  font-weight: 100;
+}
+
+.partner-photo {
+  width: 615px;
+  height: 495px;
+  margin-left: 159px;
+  font-size: 21px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.partner-photo a {
+  color: #C98730;
+}
+
+.content-text p {
+  color: #ABABAB;
+}/*# sourceMappingURL=style.css.map */
