Ispravka stvarcica oko contenta i headera

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap");
+p, h2 {
+  margin: 0;
+}
+
 .right {
   text-align: right;
 }
@@ -23,6 +27,10 @@ nav {
   flex-direction: row;
 }
 
+.nav-bar {
+  padding: 10px 0px;
+}
+
 .search-bar {
   display: flex;
   justify-content: center;
@@ -35,6 +43,7 @@ nav {
   margin: 0;
   width: 20px;
   height: 20px;
+  position: absolute;
 }
 
 .nav-contents {
@@ -68,7 +77,7 @@ nav {
 }
 
 .who_we_are {
-  width: 75%;
+  width: 80%;
   margin: 0 auto;
   font-family: "Playfair Display", sans-serif;
   padding: 80px 0px;
@@ -87,24 +96,39 @@ nav {
 .contents span:nth-child(1) {
   font-size: 47px;
   line-height: 0.7;
+  margin-top: 10px;
 }
 
 .contents span:nth-child(2) {
   font-size: 47px;
   color: #707070;
   opacity: 30%;
+  margin-top: 10px;
 }
 
 .content-text {
   width: 615px;
   margin-left: 20px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .title {
-  margin: 0px 0px 37px 0px;
   font-size: 34px;
   color: #444444;
   font-weight: 100;
+  margin-bottom: 13px;
+}
+
+.content-text p {
+  color: #ABABAB;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  letter-spacing: 0.45px;
+  font-weight: 400;
+  color: #ABABAB;
 }
 
 .partner-photo {
@@ -119,8 +143,4 @@ nav {
 
 .partner-photo a {
   color: #C98730;
-}
-
-.content-text p {
-  color: #ABABAB;
 }/*# sourceMappingURL=style.css.map */
