--- a/css/style.scss
+++ b/css/style.scss
@@ -43,6 +43,9 @@ $box-color: #F5F2EE;
 }
 .wrapper {
     width: 80%;
+    margin: 0 auto !important; 
+}
+.m-0 {
     margin: 0 auto;
 }
 p, h2 {
@@ -248,7 +251,6 @@ nav {
     letter-spacing: 1.5px;
     @include playfair();
     font-weight: 400;
-    padding-bottom: 34px;
     color: $dark-color;
 }
 .row {
@@ -296,6 +298,7 @@ nav {
     flex-direction: row;
     gap: 160px;
     position: relative;
+    overflow: hidden;
 }
 .contact p {
     font-size: 18px;
@@ -304,7 +307,7 @@ nav {
     color: $light-color;
     margin-bottom: 40px;
 }
-input {
+input, textarea {
     width: 100%;
     padding: 27px 50px; 
     border: 1px solid $light-color2;
@@ -317,6 +320,7 @@ input {
     width: 100%;
 }
 .btn {
+    width: fit-content;
     letter-spacing: 2.4px;
     @include playfair();
     padding: 22px 130px;
@@ -326,23 +330,230 @@ input {
     text-transform: uppercase;
     font-weight: 400;
 }
-.input_element {
+.input_element , .textarea_element {
     position: relative;
     @include lato;
     display: flex;
 }
+input, textarea {
+    font-size: 18px;
+}
+.textarea_element textarea{
+    height: 160px;
+    resize: none;
+}
+
 .left_side_contact {
     display: flex;
     flex-direction: column;
     width: 615px;
-    gap: 30px;
+    gap: 45px;
 }
-.icon-input {
+.input_element .icon-input {
+    font-size: 18px;
     position: absolute;
-    top: 30%;
-    left: 5%;
-    transform: translate(5%, 30%);
+    top: 25%;
+    left: 3%;
+    transform: translate(3%, 30%);
+}
+.textarea_element .icon-input {
+    font-size: 18px;
+    position: absolute;
+    top: 10%;
+    left: 3%;
+    transform: translate(3%, 30%);
 }
 .right_side_contact img{
 width: 944px;
+}
+.form-input label{
+    font-size: 18px;
+    @include lato;
+    font-weight: 400;
+    color: $light-color;
+    letter-spacing: 0.45px;
+}
+
+// checkbox
+.styled-checkbox {
+    position: absolute; 
+    opacity: 0; 
+
+    & + label {
+      position: relative;
+      cursor: pointer;
+      padding: 0;
+    }
+  
+    // Box.
+    & + label:before {
+      content: '';
+      margin-right: 10px;
+      display: inline-block;
+      vertical-align: text-top;
+      width: 20px;
+      height: 20px;
+      background: white;
+      border: 1px solid $light-color;
+    }
+  
+    // Box hover
+    &:hover + label:before {
+      background: $primary-color;
+      
+    }
+    
+  
+    // Box checked
+    &:checked + label:before {
+      background: $primary-color;
+    }
+    
+    // Disabled state label.
+    &:disabled + label {
+      color: #b8b8b8;
+      cursor: auto;
+    }
+  
+    // Disabled box.
+    &:disabled + label:before {
+      box-shadow: none;
+      background: #ddd;
+    }
+  
+    // Checkmark. Could be replaced with an image
+    &:checked + label:after {
+      content: '';
+      position: absolute;
+      left: 5px;
+      top: 10px;
+      background: white;
+      width: 2px;
+      height: 2px;
+      box-shadow: 
+        2px 0 0 white,
+        4px 0 0 white,
+        4px -2px 0 white,
+        4px -4px 0 white,
+        4px -6px 0 white,
+        4px -8px 0 white;
+      transform: rotate(45deg);
+    }
+  }
+
+  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: $dark-color;
+    font-size: 18px;
+    @include lato;
+    font-weight: 400;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: $dark-color;
+    color: $dark-color;
+    font-size: 18px;
+    @include lato;
+    font-weight: 400;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: $dark-color;
+    color: $dark-color;
+    font-size: 18px;
+    @include lato;
+    font-weight: 400;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: $dark-color;
+    color: $dark-color;
+    font-size: 18px;
+    @include lato;
+    font-weight: 400;
+  }
+
+// Footer
+  footer {
+    width: 100%;
+    background: #F5F2EE;
+    padding: 50px 0px;
+    text-align: center;
+    position: relative;
+    margin-top: 120px;
+    padding: 100px 0px 200px 0px;
+  }
+  footer:before {
+    content: "";
+    width: 207px;
+    height: 10px;
+    background: #DDCCB8;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
+  }
+
+  .border1px {
+    border-right: 1px solid #DDCCB8;
+    border-left: 1px solid #DDCCB8;
+  }
+  .footer_row {
+    display: flex;
+    @include lato();
+    justify-content: space-around;
+    flex-direction: row;
+
+  }
+  .footer_row div {
+    min-width: 400px;
+  }
+  .footer_row div:nth-child(2){
+    padding: 0px 60px;
+  }
+  .footer_row div ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+  }
+  .footer_row div:nth-child(2) ul:nth-child(2) {
+    line-height: 30px;
+    font-size: 16px;
+    padding: 30px 0px 50px 0px;
+  }
+  .footer_row div:nth-child(3) ul:nth-child(2) {
+    line-height: 30px;
+    font-size: 16px;
+    padding: 30px 0px 50px 0px;
+  }
+  .footer_row div ul li a {
+    text-decoration: none;
+    letter-spacing: 3.24px;
+  }
+
+  .f-title {
+    font-weight: 400;
+    font-size: 28px;
+    letter-spacing: 9.8px;
+    @include playfair();
+  }
+  .bold {
+    font-weight: bold;
+  }
+  .footer_arr {
+    @include lato();
+    font-size: 16px;
+    padding: 20px;
+  }
+.icon-input-right {
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translate(10%, -50%);
+    font-size: 20px;
+    cursor: pointer;
+}
+.bg-transparent {
+    background-color: transparent;
 }
